--- a/resources/scss/ceres/views/PageDesign/_header.scss
+++ b/resources/scss/ceres/views/PageDesign/_header.scss
@@ -23,6 +23,7 @@
 
 	.search-shown {
 		display: flex;
+		flex: 1;
 		@include media-breakpoint-up(md) {
 			justify-content: space-between;
 			align-items: center;
@@ -51,6 +52,7 @@
 		
 				.search-submit {
 					color: $primary;
+					background-color: $gray-200;
 					border: none;
 					font-size: 1.3rem;
 					line-height: 1;
