--- a/resources/scss/ceres/widgets/_widgets.scss
+++ b/resources/scss/ceres/widgets/_widgets.scss
@@ -3,6 +3,7 @@
 @import "Common/image-box-widget";
 @import "Common/image-carousel-widget";
 @import "Common/item-list-widget";
+@import "Common/faq-widget";
 @import "Common/legal-information-widget";
 @import "Common/link-list-widget";
 @import "Common/list-widget";
