--- a/resources/views/Containers/Partials/ItemLists/ItemList.twig
+++ b/resources/views/Containers/Partials/ItemLists/ItemList.twig
@@ -9,7 +9,7 @@
 {% if listType == "cross_selling" %}
     {% set itemList = item.CrossSellingItems.documents %}
 {% elseif listType == "tag_list" %}
-    {% set itemList = services.itemList.getItemList( listType, tagIds ).documents %}
+    {% set itemList = services.itemList.getItemList( listType, tagIds, null, 50 ).documents %}
 {% endif %}
 
 <div class="row">
