--- a/resources/scss/ceres/widgets/Grid/_grid-widget.scss
+++ b/resources/scss/ceres/widgets/Grid/_grid-widget.scss
@@ -52,27 +52,35 @@
                 height: 100%;
                 color: $footer-features-color;
                 background-color: $footer-features-bg;
-                margin-left: -15px;
-                margin-right: -15px;
-                padding-left: 15px;
-                padding-right: 15px;
                 box-sizing: content-box;
                 margin-bottom: 0;
             }
 
-            &:first-child {
-                .widget-list {
-                    margin-left: 0;
-                    padding-left: 0;
+            @include media-breakpoint-up(md)
+            {
+                .widget-list
+                {
+                    margin-left: -15px;
+                    margin-right: -15px;
+                    padding-left: 15px;
+                    padding-right: 15px;
+                }
+
+                &:first-child {
+                    .widget-list {
+                        margin-left: 0;
+                        padding-left: 0;
+                    }
+                }
+
+                &:last-child {
+                    .widget-list {
+                        margin-right: 0;
+                        padding-right: 0;
+                    }
                 }
             }
 
-            &:last-child {
-                .widget-list {
-                    margin-right: 0;
-                    padding-right: 0;
-                }
-            }
 
             @include media-breakpoint-down(sm) {
                 &:not(:last-child) {
