Combine LinkListWidget and ListWidget

--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -24421,23 +24421,8 @@ html.ie .widget-image-carousel .widget-inner .carousel-item .img-cover {
   margin-right: 10px;
 }
 
-.widget-link-list .widget-inner {
-  padding: 15px 15px 0 15px;
-}
-
-.widget-link-list .widget-inner h2 {
-  font-weight: 700;
-}
-
-.widget-link-list .widget-inner a {
-  color: #4D4F4D;
-}
-
-.widget-list .widget-inner {
-  padding: 1rem 15px;
-}
-
-.widget-list .widget-inner .list-container {
+.widget-list .widget-inner .list-container,
+.widget-list .widget-inner .list-centered {
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
@@ -24447,6 +24432,10 @@ html.ie .widget-image-carousel .widget-inner .carousel-item .img-cover {
   padding: 0;
   list-style: none;
   text-align: center;
+}
+
+.widget-list .widget-inner a {
+  color: #4D4F4D;
 }
 
 @media (max-width: 575.98px) {
@@ -24691,6 +24680,10 @@ html.ie .widget-image-carousel .widget-inner .carousel-item .img-cover {
   padding-right: 15px;
   box-sizing: content-box;
   margin-bottom: 0;
+}
+
+.footer .widget-grid .widget-inner .widget-list .widget-inner {
+  padding: 1rem;
 }
 
 .footer .widget-grid .widget-inner:first-child .widget-list {
