--- a/resources/scss/ceres/widgets/Grid/_grid-widget.scss
+++ b/resources/scss/ceres/widgets/Grid/_grid-widget.scss
@@ -13,6 +13,12 @@
         padding-left: 15px;
         padding-right: 15px;
         flex: 1;
+
+        // widget-inner inside grid should not display paddings
+        .widget .widget-inner {
+            padding-left: 0;
+            padding-right: 0;
+        }
     }
 
     .widget-inner-stacked
