--- a/resources/views/Widgets/Common/CollapseWidget.twig
+++ b/resources/views/Widgets/Common/CollapseWidget.twig
@@ -11,12 +11,13 @@
         {% for collapseBox in collapseBoxes %}
         <div class="card">
           <button class="card-header btn btn-link" id="heading_{{ collapseId }}_{{ loop.index }}" type="button" data-toggle="collapse" data-target="#collapse_{{ collapseId }}_{{ loop.index }}" aria-expanded="true" aria-controls="collapse_{{ collapseId }}_{{ loop.index }}">
-            <h5 class="h5 mb-0">
+            <h5 class="h5 pr-5 mb-0">
                 {{ collapseBox.headline | raw }}
+                <i class="fa fa-chevron-down"></i>
             </h5>
           </button>
 
-          <div id="collapse_{{ collapseId }}_{{ loop.index }}" class="collapse{% if loop.index == 1%} show{% endif %}" aria-labelledby="heading_{{ collapseId }}_{{ loop.index }}" data-parent="#accordion_{{ collapseId }}">
+          <div id="collapse_{{ collapseId }}_{{ loop.index }}" class="collapse" aria-labelledby="heading_{{ collapseId }}_{{ loop.index }}" data-parent="#accordion_{{ collapseId }}">
             <div class="card-body">
               {{ collapseBox.text | raw }}
             </div>
