--- a/resources/views/Widgets/Common/ListWidget.twig
+++ b/resources/views/Widgets/Common/ListWidget.twig
@@ -8,7 +8,7 @@
 {% endfor %}
 
 {% if hasEntries or title is not empty %}
-    <div class="widget widget-list">
+    <div class="widget {% if isLinkList %}widget-link-list{% else %}widget-list{% endif %}">
         <div class="widget-inner">
             {% if title is not empty %}<p class="h4">{{ title }}</p>{% endif %}
             {% if listEntries | length > 0 %}
