--- a/resources/scss/ceres/widgets/Common/_list-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_list-widget.scss
@@ -1,4 +1,5 @@
-.widget-list
+.widget-list,
+.widget-link-list
 {
     .widget-inner
     {
@@ -7,10 +8,12 @@
             width: fit-content;
             margin-left: auto;
             margin-right: auto;
-            margin-bottom: 0;
-            padding: 0;
-            list-style: none;
             text-align: center;
+        }
+
+        ul
+        {
+            margin-bottom: 0;
         }
 
         a {
