--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -18170,6 +18170,7 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
   font-size: 1.3rem;
   line-height: 1;
   padding: 0.4rem 1rem;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
@@ -18384,7 +18385,7 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
   background-color: #4D4F4D;
 }
 
-@media (min-width: 576px) {
+@media (max-width: 991.98px) {
   .wrapper-main #page-header .container-max {
     padding: 0;
   }
@@ -18537,14 +18538,15 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
   }
 }
 
+.wrapper-main header .container-max > .row {
+  -ms-flex-direction: row-reverse;
+      flex-direction: row-reverse;
+  position: relative;
+  margin-left: 0;
+  margin-right: 0;
+}
+
 @media (min-width: 576px) {
-  .wrapper-main header .container-max > .row {
-    -ms-flex-direction: row-reverse;
-        flex-direction: row-reverse;
-    position: relative;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
   .wrapper-main header .controls-list {
     width: auto;
   }
@@ -18640,7 +18642,6 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
       flex: 100;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
   position: relative;
-  padding: 0 15px;
 }
 
 .search-box-shadow-frame .autocomplete-suggestions {
@@ -18744,11 +18745,6 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
   overflow: hidden;
 }
 
-.cmp-country-settings.no-margin,
-.cmp-currency-select.no-margin {
-  margin: 0;
-}
-
 @media (min-width: 992px) {
   .cmp-country-settings,
   .cmp-currency-select {
@@ -18762,28 +18758,6 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
   .cmp-currency-select {
     overflow: auto;
     max-height: 60vh;
-  }
-}
-
-.cmp-country-settings .country-settings-inner,
-.cmp-country-settings .currency-select-inner,
-.cmp-currency-select .country-settings-inner,
-.cmp-currency-select .currency-select-inner {
-  padding: 1rem;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-flow: row nowrap;
-      flex-flow: row nowrap;
-  margin: 0 auto;
-}
-
-@media (min-width: 992px) {
-  .cmp-country-settings .country-settings-inner.languages,
-  .cmp-country-settings .currency-select-inner.languages,
-  .cmp-currency-select .country-settings-inner.languages,
-  .cmp-currency-select .currency-select-inner.languages {
-    -ms-flex-pack: end;
-        justify-content: flex-end;
   }
 }
 
@@ -18879,7 +18853,7 @@ html.ie #thumb-carousel .owl-stage .owl-item img {
 
 .cmp-country-settings .currency-list ul > li,
 .cmp-currency-select .currency-list ul > li {
-  width: 12.5%;
+  width: 16.666667%;
 }
 
 .flag-icon-en {
