--- a/resources/views/Widgets/Common/CollapseWidget.twig
+++ b/resources/views/Widgets/Common/CollapseWidget.twig
@@ -10,7 +10,7 @@
     <div class="widget accordion widget-{{ widget.settings.appearance.mobile | default('primary')  }}" id="accordion_{{ collapseId }}">
         {% for collapseBox in collapseBoxes %}
         <div class="card">
-          <button class="card-header btn btn-link" id="heading_{{ collapseId }}_{{ loop.index }}" type="button" data-toggle="collapse" data-target="#collapse_{{ collapseId }}_{{ loop.index }}" aria-expanded="true" aria-controls="collapse_{{ collapseId }}_{{ loop.index }}">
+          <button v-toggle-faq-icon="{newIcon: 'fa-chevron-up', oldIcon: 'fa-chevron-down'}" class="card-header btn btn-link" id="heading_{{ collapseId }}_{{ loop.index }}" type="button" data-toggle="collapse" data-target="#collapse_{{ collapseId }}_{{ loop.index }}" aria-expanded="false" aria-controls="collapse_{{ collapseId }}_{{ loop.index }}">
             <h5 class="h5 pr-5 mb-0">
                 {{ collapseBox.headline | raw }}
                 <i class="fa fa-chevron-down"></i>
