--- a/resources/css/ceres-legacy.scss
+++ b/resources/css/ceres-legacy.scss
@@ -19688,6 +19688,13 @@ html.ie {
 }
 .widget.accordion {
     .card {
+        &:first-of-type {
+            border-bottom: $card-border-width solid $card-border-color;;
+        }
+        &:nth-of-type(2) {
+            border-top: 0;
+        }
+
         button {
             text-align: left;
             padding: $card-spacer-x;
@@ -19709,6 +19716,10 @@ html.ie {
         button:focus { 
             color: black;
         }
+    }
+
+    div .card-body p {
+        margin: 0;
     }
 
     &.widget-primary
