FIX responsive layout for single item view

--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -23455,6 +23455,20 @@ html.ie .wrapper-main .basket-item-container .basket-item-container-right .qty-b
   margin-right: 15px;
 }
 
+.single-leftside {
+  margin-top: 1rem;
+}
+
+@media (min-width: 768px) {
+  .single-leftside {
+    margin-top: 0;
+    position: absolute;
+    left: 58.33333%;
+    top: 0;
+    bottom: 0;
+  }
+}
+
 .loading .loading-animation-frame {
   display: block;
 }
