--- a/resources/scss/ceres/views/Category/_category-list-controls.scss
+++ b/resources/scss/ceres/views/Category/_category-list-controls.scss
@@ -78,6 +78,8 @@
                     color: $gray-dark;
                 }
                 .form-check {
+                    padding-left: 0;
+
                     .form-check-input {
                         &:checked + label {
                             background: $gray-lighter2;
