--- a/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
+++ b/resources/views/ItemList/Components/Filter/ItemFilterPrice.twig
@@ -1,6 +1,6 @@
 <script type="x/template" id="vue-item-filter-price">
 	<div class="row">
-		<div class="input-group col-lg-5 pr-0 pb-3">
+		<div class="input-group col-lg-5 pb-3">
 			<div class="input-group-prepend">
 				<span class="input-group-text">${ currency }</span>
 			</div>
@@ -12,7 +12,7 @@
 				   v-model="priceMin">
 		</div>
 
-		<div class="input-group col-lg-5 pr-0 pb-3">
+		<div class="input-group col-lg-5 pb-3">
 			<div class="input-group-prepend">
 				<span class="input-group-text">${ currency }</span>
 			</div>
