--- a/resources/scss/ceres/widgets/Common/_faq-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_faq-widget.scss
@@ -1,7 +1,7 @@
 .widget.accordion {
     .card {
         &:first-of-type {
-            border-bottom: $card-border-width solid $card-border-color;;
+            border-bottom: $card-border-width solid $card-border-color;
         }
         &:nth-of-type(2) {
             border-top: 0;
@@ -10,9 +10,9 @@
         button {
             text-align: left;
             padding: $card-spacer-x;
+            border-top-width: 0;
 
             h5 {
-                line-height: inherit;
                 font-weight: bold;
                 position: relative;
 
@@ -23,15 +23,20 @@
                     font-size: 1.5rem;
                 }
             }
-        }
+        }        
         button:hover,
         button:focus { 
             color: black;
         }
-    }
 
-    div .card-body p {
-        margin: 0;
+        div .card-body {
+            margin-top: 1px;
+
+            p {
+                margin: 0;
+                line-height: $headings-line-height;
+            }
+        }
     }
 
     &.widget-primary
